Implement tgene>filterTargetGenes in new style